# archv-py

./: .gitignore  LICENSE.txt  README.md  README.txt  filter.py  main.py  matching.py  process.py  pyproject.toml  readme.txt  requirements.txt  scan.py  settings.yml  setup.py  show_keypoints.py  utils.py
archv/: Matches.py  archv.py  bow.py  dictionary.py  draw_matches.py  filter.py  image.py  main.py  matches.py  matching.py  process.py  roi.py  scan.py  settings.yml  show.py  show_keypoints.py  surf.py  utils.py
archv/classes/: image.py  matches.py
archv/parameters/: flickr.yml
archv/scripts/: draw_matches.py  process.py
archv/visual_words/: bow.py  dictionary.py  histograms.py
data/ballads-100/: dictionary.yml
data/ballads-100/histograms/: A-20707-30.yml  A-20766-10.yml  A-20923-40.yml  A-21138-10.yml  A-21355-30.yml  A-21738-10.yml  A-21814-10.yml  A-21954-30.yml  A-21976-30.yml  A-21982-10.yml  A-34135-10.yml  B-20711-20.yml  B-21080-20.yml  B-21135-10.yml  B-21165-40.yml  B-21310-20.yml  B-21383-40.yml  B-21962-20.yml  B-21982-20.yml  B-22024-20.yml  B-30822-20.yml  B-33481-20.yml  C-20683-20.yml  C-20923-10.yml  C-21003-10.yml  C-21082-10.yml  C-21176-10.yml  C-21243-30.yml  C-21751-20.yml  C-21814-20.yml  C-22024-10.yml  C-30845-20.yml  C-33867-20.yml  D-20255-20.yml  D-20985-20.yml  D-20997-20.yml  D-21085-20.yml  D-21125-30.yml  (+72 more)
data/dictionaries/: dict.yml
parameters/: ballad.yml
scripts/: draw_matches.py  roi.py  scan.py  show.py
scripts/bag-of-words/: bow.py  dictionary.py  make_histograms.py  process.py
scripts/preprocess/: threshold.py
(+112 files in other folders)
