[tool.poetry]
name = "archv"
version = "0.2.0"
description = "Content Based Image Retrieval for Images of Historical Materials"
authors = ["Arthur Koehl <avkoehl@ucdavis.edu>, Carl Stahmer <cstahmer@ucdavis.edu>"]
license = ""

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.1"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]
ipython = "^7.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
